# aneurisym-detection

./: README.md  pyproject.toml
notebooks/: eda.ipynb  train_25.ipynb
src/: __init__.py  baseline_25D.py  config.py  dataloader.py  metrics.py  partition.py  slice_bag.py  train_eval.py  utils.py
